ags (3.3.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsFxNotationAudio, AgsFxNotationAudioProcessor, AgsFxNotationChannel,
	  AgsFxNotationChannelProcessor, AgsFxNotationRecycling and AgsFxNotationAudioSignal
	* implemented AgsFxPatternAudio, AgsFxPatternAudioProcessor, AgsFxPatternChannel,
	  AgsFxPatternChannelProcessor, AgsFxPatternRecycling and AgsFxPatternAudioSignal
	* implemented AgsFxDssiAudio, AgsFxDssiAudioProcessor, AgsFxDssiChannel,
	  AgsFxDssiChannelProcessor, AgsFxDssiRecycling and AgsFxDssiAudioSignal
	* TODO:JK: implemented AgsFxLadspaAudio and AgsFxLadspaAudioProcessor
	* TODO:JK: implemented AgsFxLv2Audio and AgsFxLv2AudioProcessor
	* TODO:JK: implemented ags/audio/fx
	* TODO:JK: extended user's handbook to cover OSC server preferences

ags (3.2.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented test, set and unset flags of AgsSynth, AgsFMSynth, AgsSyncsynth and AgsFMSyncsynth
	* improved AgsDial to use page-up and page-down keys
	* improved AgsDial to increment page as clicking buttons
	* improved AgsEffectBulk, AgsEffecLine and AgsLine to apply page-size of adjustments
	* improved AgsTurtle to check unichar range instead of UTF-8 sequences
	* improved AgsNotationEditor to queue resize piano
	* improved AgsFMSynth to have 2 digits of lower
	* improved AgsOscillator and AgsFMOscillator do sync to emit oscillator changed

ags (3.2.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential NULL pointer dereference of LADSPA, DSSI and LV2
	* fixed wrong midi-end-mapping persistence of AgsSimpleFile

ags (3.2.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed greedy ags-lv2 and ags-dssi

ags (3.2.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsTurtle match functions
	* refactored AgsTurtle read functions
	* refactored AgsLv2TurtleScanner to use match functions
	* fixed AgsFFPlayer restore

ags (3.2.11)
